# Lima-camera-roperscientific

./: CMakeLists.txt  pom-win.xml  pom.xml
doc/: index.rst
include/: RoperScientific.h  RoperScientificBinCtrlObj.h  RoperScientificCamera.h  RoperScientificCompatibility.h  RoperScientificDetInfoCtrlObj.h  RoperScientificInterface.h  RoperScientificRoiCtrlObj.h  RoperScientificSyncCtrlObj.h
python/: __init__.py
sdk/linux/include/: master.h  pvcam.h
sdk/msvc/: Pvcam32.lib  ff.lib  pvcam.h  rsptg.h
sip/: RoperScientificCamera.sip  RoperScientificInterface.sip
src/: Makefile  RoperScientificBinCtrlObj.cpp  RoperScientificCamera.cpp  RoperScientificDetInfoCtrlObj.cpp  RoperScientificInterface.cpp  RoperScientificRoiCtrlObj.cpp  RoperScientificSyncCtrlObj.cpp
test/RoperCapabilities/: pom.xml
test/RoperCapabilities/src/: GetParam_GetEnum.cpp
